[package]
name = "requister"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.1.0"
http = "1.1.0"
reqwest = { version = "0.11.25", features = ["blocking", "json"] }
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
serde_json = "1.0.114"
work-queue = "0.1.4"

[profile.release]
codegen-units = 1
strip = "debuginfo"